src/test/deca/context/invalid/not_valid_2.deca
// Test non valide 2:
// Opération booléenne sur des entiers
// Créé le 13.01.2022
// Pas encore implémenté

{
println (true && false);
println (1 && 2);
}